some issues solved

--- a/index.html
+++ b/index.html
@@ -16,710 +16,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./index.css">
     <title>Mondson Trucking</title>
 
 
 </head>
 <style>
-    .font-monorope {
-        font-family: "Manrope", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 400;
-        font-style: normal;
-        font-size: smaller;
-        color: white;
-        margin: 0;
-    }
 
-    .font-monorope-1 {
-        font-family: "Manrope", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 600;
-        /* line-height: 29px; */
-        font-style: normal;
-        font-size: 18px;
-        color: #FF493B;
-        letter-spacing: 4px;
-        margin: 0;
-    }
-
-    .col-auto {
-        flex: 0 0 auto;
-    }
-
-    .custom-icon {
-
-        color: #ffffff;
-        border: 1px solid #ffffff;
-        padding: 6px;
-
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        width: 30px;
-
-        height: 30px;
-
-
-    }
-
-    .custom-icon:hover {
-
-        background-color: red;
-        transition: 0.3s;
-    }
-
-    .font-michroma {
-        font-family: "Michroma", sans-serif;
-        font-weight: 200;
-        font-style: normal;
-        font-size: x-small;
-    }
-
-    .button-rounded {
-        background-color: red;
-        padding: 3px 25px 5px 25px;
-        color: white;
-        border: none;
-        border-radius: 20px;
-    }
-
-    .button-rounded:hover {
-        transition: 0.3s;
-        color: black;
-        background-color: #ffffff;
-    }
-
-    .policy-page {
-        opacity: 0.5;
-    }
-
-    .policy-page:hover {
-        opacity: 1;
-        transition: 0.3s;
-    }
-
-    .bg-img {
-        background: url("./assets/front-side.webp") no-repeat center center;
-        background-size: cover;
-        /* width: 50%; */
-        height: 700px;
-        opacity: 0.5;
-    }
-
-
-    .bg-img-1 {
-        background: url("./assets/main-truck-mask.png") no-repeat center center;
-
-        background-size: cover;
-        position: relative;
-
-    }
-
-    .bg-img-1::after {
-        content: "";
-        background: rgba(0, 0, 0, 0.7);
-
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 1;
-    }
-
-    .bg-img-1>* {
-        position: relative;
-        z-index: 2;
-    }
-
-
-
-
-    @media (max-width: 768px) {
-        .bg-img-1 {
-            height: 400px;
-        }
-    }
-
-    @media (max-width: 576px) {
-        .bg-img-1 {
-            height: 400px;
-        }
-    }
-
-    .main-heading {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-        line-height: 70px;
-        font-size: 57px;
-        padding: 20px 0px;
-
-    }
-
-    /* section1 css */
-    .sec1-para {
-        font-family: "Manrope", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 15px;
-        line-height: 30px;
-        width: 500px;
-        color: white;
-        margin: 0;
-    }
-
-    @media (max-width: 767.98px) {
-        .main-heading {
-            font-size: 45px;
-            line-height: 55px;
-        }
-
-        .sec1-para {
-            font-size: 18px;
-            line-height: 30px;
-            width: 100%;
-        }
-    }
-
-    .sec1-btn1 {
-        background-color: transparent;
-        padding: 8px 23px;
-        color: white;
-        border: 1px solid white;
-        border-radius: 20px;
-        box-sizing: border-box;
-        transition: background-color 0.5s, color 0.5s, border-color 0.5s;
-    }
-
-    .sec1-btn1:hover {
-        background-color: #FF493B;
-        color: black;
-        border-color: #FF493B;
-        /* Change border color to match background */
-    }
-
-    .sec1-btn2 {
-        background-color: #ffffff;
-        color: black;
-        padding: 8px 24px 9px 24px;
-        border: none;
-        border-radius: 20px;
-        box-sizing: border-box;
-
-    }
-
-    .sec1-btn2:hover {
-        background-color: #FF493B;
-        color: white;
-        transition: 0.5s;
-    }
-
-    /* section with bg img */
-    .sec-img {
-        background-image: url("./assets/2nd-truck.webp");
-        width: 100%;
-        height: 500px;
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
-
-    @media (max-width: 576px) {
-        .custom-width {
-            width: 55%;
-            padding: 5px 0px 20px 25px;
-        }
-    }
-
-    @media (min-width: 778px) {
-        .custom-width {
-            /* width: 55%; */
-            padding: 5px 0px 30px 25px;
-        }
-    }
-
-    .inc-num1 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-        line-height: 70px;
-        font-size: 33px;
-        margin: 0;
-    }
-
-    .custom-width p {
-        font-family: "Manrope", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 17px;
-
-        margin: 0;
-    }
-
-    /* 3rd section */
-    .third-para1 {
-        font-family: "Manrope", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 15px;
-        color: #FF493B;
-        letter-spacing: 4px;
-        margin: 0;
-    }
-
-    .box1 h2 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-        line-height: 70px;
-        font-size: 50px;
-        padding: 20px 0px;
-    }
-
-    @media (max-width: 576px) {
-        .box1 h2 {
-            font-size: 40px;
-            line-height: 50px;
-        }
-    }
-
-    .third-para2 {
-        font-family: "Manrope", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 15px;
-        line-height: 30px;
-
-        color: white;
-        margin-bottom: 20px;
-    }
-
-    .third-h3 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-        line-height: 60px;
-        font-size: 25px;
-        padding: 5px 0px;
-    }
-
-    .third-p {
-        font-family: "Manrope", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 16px;
-        line-height: 30px;
-        color: white;
-        margin-bottom: 20px;
-    }
-
-    @media (max-width: 576px) {
-        .third-border {
-            border-bottom: 1px solid rgb(255, 254, 253, 0.2);
-            margin-bottom: 5px;
-        }
-    }
-
-    /* section4 */
-    .sec4-h2 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-
-        font-size: 55px;
-        padding: 30px 0px;
-    }
-
-    .sec4-p1 {
-        font-family: "Manrope", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 16px;
-        letter-spacing: 3px;
-        color: #FF493B;
-        margin: 0;
-    }
-
-    @media (max-width: 700px) {
-        .sec4-responsive {
-            text-align: center;
-
-        }
-
-        .sec4-h2 {
-            font-size: 33px;
-        }
-
-        .sec4-responsive button {
-            float: none;
-        }
-    }
-
-    @media(min-width:750px) {
-        .sec4-responsive button {
-            float: inline-end;
-        }
-    }
-
-    .sec4-h3 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-        line-height: 60px;
-        font-size: 25px;
-        padding: 5px 0px;
-    }
-
-    .sec4-p2 {
-        font-family: "Manrope", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 15px;
-        line-height: 30px;
-
-        color: white;
-        margin-bottom: 20px;
-    }
-
-    .section5 h2 {
-
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-        /* line-height: 70px; */
-        font-size: 50px;
-        padding: 20px 0px;
-    }
-
-    .section5 p:nth-of-type(1) {
-        font-family: "Manrope", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 15px;
-        letter-spacing: 4px;
-
-
-
-    }
-
-    .section5 p:nth-of-type(2) {
-        font-family: "Manrope", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 15px;
-    }
-
-    .section5-btn1 {
-        background-color: transparent;
-        padding: 8px 23px;
-        color: white;
-        border: 1px solid black;
-        border-radius: 20px;
-        box-sizing: border-box;
-        transition: background-color 0.5s, color 0.5s, border-color 0.5s;
-    }
-
-    .section5-btn1:hover {
-        background-color: #0B1117;
-    }
-
-    .section5-btn2 {
-        background-color: #0B1117;
-        color: white;
-        border-radius: 20px;
-        box-sizing: border-box;
-        border: none;
-        padding: 10px 25px;
-        transition: 0.5s;
-    }
-
-    .section5-btn2:hover {
-        background-color: white;
-        color: #0B1117;
-    }
-
-    @media(max-width:700px) {
-        .section5 h2 {
-            font-size: 40px;
-            text-align: center;
-        }
-
-        .section5 p:nth-of-type(1) {
-            text-align: center;
-        }
-
-        .section5 p:nth-of-type(2) {
-            text-align: center;
-            font-size: 17px;
-        }
-
-
-    }
-
-    /* section6 */
-    .section6 h2:nth-of-type(1) {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-        line-height: 70px;
-        font-size: 44px;
-        padding: 20px 0px;
-    }
-
-    @media (max-width:700px) {
-        .section6 h2:nth-of-type(1) {
-
-            font-size: 40px;
-            line-height: 50px;
-        }
-    }
-
-    .section6 h3 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-
-        font-size: 20px;
-    }
-
-    .section6 p {
-        font-family: "Manrope", sans-serif;
-        font-weight: 300;
-        font-style: normal;
-        font-size: 17px;
-    }
-
-    /* section 7 */
-    .section7-col2 p:nth-of-type(1) {
-        font-family: "Manrope", sans-serif;
-        font-weight: 700;
-        font-style: normal;
-        font-size: 17px;
-        letter-spacing: 4px;
-        line-height: 28px;
-        color: #FF493B;
-        margin: 0;
-
-    }
-
-    .section7-col2 h2 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-
-        font-size: 53px;
-        padding: 20px 0px;
-    }
-
-    .section7 {
-        padding: 150px 0px;
-    }
-
-    .section7-col2 p:nth-of-type(2) {
-        font-family: "Manrope", sans-serif;
-
-        font-style: normal;
-        font-size: 16px;
-        line-height: 26px;
-
-    }
-
-    .section7-bg-img {
-        background-image: url("./assets/working.webp");
-        width: 80%;
-        height: 600px;
-        background-size: cover;
-        background-position: center;
-    }
-
-    .section7-carousel {
-        left: 50px;
-        top: 315px;
-    }
-
-    @media(max-width:700px) {
-        .section7-bg-img {
-            width: 300px;
-
-            background-repeat: no-repeat;
-            height: 400px;
-        }
-
-        .section7-carousel {
-            left: 18px;
-            top: 235px;
-            width: 290px;
-        }
-
-        .section7-col2 h2 {
-
-
-            line-height: 40px;
-            font-size: 25px;
-
-        }
-
-        .section7-col2 .six-box1 {
-            padding-left: 20px;
-        }
-
-        .section7-col2 p:nth-of-type(2) {
-
-            font-size: 11px;
-            line-height: 20px;
-            letter-spacing: 1px;
-
-        }
-
-        .section7 {
-            padding: 0px 0px 100px 0px;
-        }
-    }
-
-    /* section8 */
-    .contact p:nth-of-type(1) {
-        font-family: "Manrope", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 15px;
-        letter-spacing: 4px;
-        color: #FF493B;
-        padding-bottom: 10px;
-    }
-
-    .contact p:nth-of-type(2) {
-        font-family: "Manrope", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        font-size: 17px;
-
-        padding-bottom: 10px;
-    }
-
-    .section8 h2 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        word-wrap: break-word;
-        line-height: 70px;
-        font-size: 50px;
-        padding: 20px 0px;
-    }
-
-    .section8 h3 {
-        font-family: "Manrope", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        font-size: 17px;
-
-
-    }
-
-    .num {
-        font-family: "Michroma", sans-serif;
-
-        font-size: 20px;
-
-
-    }
-
-    .num:hover {
-        color: #FF493B;
-        transition: 0.3s;
-    }
-
-    .email {
-        font-family: "Michroma", sans-serif;
-
-        font-size: 18px;
-
-
-    }
-
-    .bottom-border {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-        /* White border with 30% opacity */
-    }
-
-    .email:hover {
-        color: #FF493B;
-        transition: 0.3s;
-    }
-
-    @media(max-width:700px) {
-        .section8 h2 {
-            line-height: 40px;
-            font-size: 30px;
-        }
-    }
-
-    /* section9 */
-    .sec9-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 10px;
-    }
-
-    .section9 h3 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-
-
-        font-size: 14px;
-        padding: 5px 0px;
-    }
-
-    @media(max-width:300px) {
-
-        .section9 h3:last-of-type {
-            font-size: 10px;
-        }
-    }
-
-    /* footer */
-    .footer-p {
-        font-family: "Manrope", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        font-size: 16px;
-        padding: 35px 0 0 0;
-        line-height: 30px;
-    }
-
-    .footer h3 {
-        font-family: "Michroma", sans-serif;
-        font-weight: 500;
-
-
-        font-size: 14px;
-        padding: 5px 0px;
-        line-height: 40px;
-    }
-
-    .footer li {
-        font-family: "Manrope", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        font-size: 16px;
-
-        line-height: 50px;
-    }
-
-    .footer li:hover {
-        color: #FF493B;
-        transition: 0.3s;
-    }
 </style>
 
 
@@ -830,9 +133,27 @@
 
     <main>
         <!-- 1st section -->
-        <section id="section1">
+        <section id="section1" class="bg-img-1 h-100 py-5">
 
-            <div class="container-fluid bg-img-1 h-100 h-md-75 h-lg-50">
+
+            <div class="container py-5">
+                <div class="d-flex flex-column text-white text-start content-box">
+
+                    <p class="lead font-monorope-1">Welcome to Mondson Trucking</p>
+                    <h1 class="py-3 main-heading">Speedy, Reliable Delivery for Your Freight</h1>
+                    <p class="lead sec1-para">At Mondson Trucking, We deliver your freight quickly and reliably,
+                        ensuring your
+                        goods reach
+                        their destination safely and on time.</p>
+                    <div class="container pt-3  p-0">
+                        <button class="sec1-btn1 me-md-5  me-3"> get started</button>
+                        <button class="sec1-btn2">Our Services</button>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- <div class="container-fluid bg-img-1 h-100 h-md-75 h-lg-50">
                 <div class="container">
 
 
@@ -847,7 +168,7 @@
                                         ensuring your goods reach their destination safely and on time.</p>
                                 </div>
 
-                                <div class="row my-3">
+                                <div class="row my-3 align-items-center">
                                     <div class=" col-6 col-md-6 col-lg-3 pb-3 pb-md-0">
                                         <button type="button" class="sec1-btn1  mb-md-0">Get
                                             Started</button>
@@ -860,7 +181,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <!-- 2nd section -->
         <section class="py-5" style="background-color:#0B1117 ;">
