--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
 
-        <!-- header with links -->
+        <!-- navbar -->
         <section class=" p-3" style="background-color: #0B1117;">
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg ">
