--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -4,14 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Michroma&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./privacy.css">
     <title>Privacy Policy - MondsonTrucking</title>
 </head>
 
 <body>
-    <header class="bg-dark">
-        <section class="bg-dark p-3">
+    <header>
+        <section class=" p-3" style="background-color: #0B1117;">
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
@@ -23,122 +31,149 @@
                             <!-- <span class="navbar-toggler-icon"></span> -->
                             <span><img src="./assets/menu-bar.png" alt="" width="30px"></span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <div class="collapse navbar-collapse justify-content-center pe-3" id="navbarSupportedContent">
+                            <ul class="navbar-nav mb-2 mb-lg-0 font-michroma w-100 d-flex justify-content-between">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" aria-current="page"
-                                        href="./index.html">Home</a>
+                                    <a class="nav-link active text-white" aria-current="page" href="#section1">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">About Us</a>
+                                    <a class="nav-link text-white" href="#section3">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Services</a>
+                                    <a class="nav-link text-white" href="#section4">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Why Choose Us </a>
+                                    <a class="nav-link text-white" href="#section6">Why Choose Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Testimonials</a>
+                                    <a class="nav-link text-white" href="#section7">Testimonials</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Privacy Policy</a>
+                                    <a class="nav-link text-white policy-page" href="./privacypolicy.html">Privacy
+                                        Policy</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Contact Us</a>
+                                    <a class="nav-link text-white" href="#section8">Contact Us</a>
                                 </li>
-
                             </ul>
-                            <button type="button" class="btn btn-danger">Get Started</button>
 
+
+                            <button type="button" class="button-rounded d-lg-none d-lg-block">Get
+                                Started</button>
+
+                        </div>
+                        <div class=" d-none d-lg-block d-flex justify-content-center ">
+                            <button type="button" class="button-rounded ">Get
+                                Started</button>
                         </div>
                     </div>
                 </nav>
             </div>
         </section>
-        <div class="container text-center py-5">
-            <h1 class="text-white">Privacy Policy</h1>
 
-        </div>
+
     </header>
 
-    <main class="bg-dark text-white">
+    <main class=" text-white" style="background-color: #0B1117;">
+        <!-- section1 -->
+        <section>
+
+            <div class="container d-flex flex-column justify-content-center align-items-center text-center content-box">
+                <h2 class="main-h2">Privacy Policy</h2>
+                <div class="pt-3">
+                    <a href="./index.html" class="text-decoration-none text-white link-home">Home</a>
+                    <span class="px-2">
+
+                        <i class="bi bi-arrow-right fs-6" style="color: #FF493B;"></i>
+
+                    </span>
+                    <span class="policy">Privecy Policy</span>
+                </div>
+            </div>
+        </section>
         <hr class="m-0">
-        <div class="container">
-            <h3>Introduction</h3>
-            <p>At Mondson Trucking, we are committed to protecting your privacy. This Privacy Policy outlines how we
-                collect, use, disclose, and safeguard your information when you visit our website,
-                https://mondsontrucking.com/</p>
 
-            <h3>Collection of your information</h3>
-            <p>We may collect information about you in a variety of ways. The information we may collect on the Website
-                includes:</p>
-            <ul class="list-unstyled">
-                <li>Name</li>
-                <li>Email Address</li>
-                <li>Phone number</li>
-                <li>Mailling Address</li>
-                <li>Payment information</li>
-            </ul>
-            <h3>
-                How We Use Your Information
-            </h3>
-            <p>We may use the information we collect for various purposes, including:</p>
-            <ul class="list-unstyled">
-                <li>To provide and maintain our website</li>
-                <li>To process transactions</li>
-                <li>To communicate with you</li>
-                <li>To improve our website and services</li>
-                <li>To send promotional content (with your consent)</li>
-            </ul>
-            <h3>
-                Sharing Your Information
-            </h3>
-            <p>We do not sell or rent your personal information to third parties. We may share your information with:
-            </p>
+        <section>
 
-            <ul class="list-unstyled">
-                <li>Service providers who assist in our operations </li>
-                <li>Legal authorities if required by law</li>
-            </ul>
-            <h3>
-                Data Security
-            </h3>
-            <p class="text-danger fs-4">
 
-                SMS, Opt-In or Phone Numbers for the purpose of SMS are not being Shared.
-            </p>
-            <h3>
-                Your Rights
-            </h3>
+            <div class="container py-5">
+                <h2>Introduction</h2>
+                <p>At Mondson Trucking, we are committed to protecting your privacy. This Privacy Policy outlines how we
+                    collect, use, disclose, and safeguard your information when you visit our website,
+                    https://mondsontrucking.com/</p>
 
-            <p>You have the right to: </p>
+                <h2>Collection of your information</h2>
+                <p>We may collect information about you in a variety of ways. The information we may collect on the
+                    Website
+                    includes:</p>
+                <ul class="list-unstyled main-ul">
+                    <li>Name</li>
+                    <li>Email Address</li>
+                    <li>Phone number</li>
+                    <li>Mailling Address</li>
+                    <li>Payment information</li>
+                </ul>
+                <h2>
+                    How We Use Your Information
+                </h2>
+                <p>We may use the information we collect for various purposes, including:</p>
+                <ul class="list-unstyled main-ul">
+                    <li>To provide and maintain our website</li>
+                    <li>To process transactions</li>
+                    <li>To communicate with you</li>
+                    <li>To improve our website and services</li>
+                    <li>To send promotional content (with your consent)</li>
+                </ul>
+                <h2>
+                    Sharing Your Information
+                </h2>
+                <p>We do not sell or rent your personal information to third parties. We may share your information
+                    with:
+                </p>
 
-            <ul class="list-unstyled">
-                <li>Access the personal information we hold about you </li>
-                <li>Request correction of inaccurate or incomplete data </li>
-                <li>Request deletion of your personal information </li>
-                <li>Opt-out of marketing communications</li>
-            </ul>
-            <h3>
-                Changes to This Privacy Policy
-            </h3>
-            <p>
+                <ul class="list-unstyled main-ul">
+                    <li>Service providers who assist in our operations </li>
+                    <li>Legal authorities if required by law</li>
+                </ul>
+                <h2>
+                    Data Security
+                </h2>
+                <p class="" style="color: #FF493B;">
 
-                We may update this Privacy Policy from time to time. We will notify you of any changes by posting the
-                new policy on this page. Your continued use of the site after any modifications indicates your
-                acceptance of the new terms.
-            </p>
+                    SMS, Opt-In or Phone Numbers for the purpose of SMS are not being Shared.
+                </p>
+                <h2>
+                    Your Rights
+                </h2>
 
-            <h3>
-                Contact Us
-            </h3>
-            <ul class="list-unstyled m-0 p-0">
-                <li>If you have any questions or concerns about this Privacy Policy, </li>
-                <li>please contact us at: <span class="text-danger fs-4">Dispatch@mondsontrucking.com</span> </li>
-            </ul>
-        </div>
+                <p>You have the right to: </p>
 
+                <ul class="list-unstyled main-ul">
+                    <li>Access the personal information we hold about you </li>
+                    <li>Request correction of inaccurate or incomplete data </li>
+                    <li>Request deletion of your personal information </li>
+                    <li>Opt-out of marketing communications</li>
+                </ul>
+                <h2>
+                    Changes to This Privacy Policy
+                </h2>
+                <p>
+
+                    We may update this Privacy Policy from time to time. We will notify you of any changes by posting
+                    the
+                    new policy on this page. Your continued use of the site after any modifications indicates your
+                    acceptance of the new terms.
+                </p>
+
+                <h2>
+                    Contact Us
+                </h2>
+                <ul class="list-unstyled m-0 p-0 main-ul">
+                    <li>If you have any questions or concerns about this Privacy Policy, </li>
+                    <li>please contact us at: <a href="" class="mail">Dispatch@mondsontrucking.com</a> </li>
+                </ul>
+            </div>
+        </section>
 
     </main>
 
