--- a/index.html
+++ b/index.html
@@ -319,9 +319,10 @@
                     </div>
                 </div>
             </div>
+            <!-- row row-cols-1 row-cols-lg-3 row-cols-md-2  -->
             <div class="container text-center">
-                <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-3">
-                    <div class="col py-5" style="background-color: #020405;">
+                <div class="row g-3">
+                    <div class="col-md py-5 me-3" style="background-color: #020405;">
                         <div class=" d-flex flex-column justify-content-between h-100 p-3 text-start">
 
                             <img src="./assets/ship-icon.webp" alt="" width="50px">
@@ -335,7 +336,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col py-5" style="background-color: #020405;">
+                    <div class="col-md me-3 mt-3  py-5" style="background-color: #020405;">
                         <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
                             <img src="./assets/aeroplane-icon.webp" alt="" width="50px">
                             <h3 class="sec4-h3">Drop Equipment</h3>
@@ -347,7 +348,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col py-5" style="background-color: #020405;">
+                    <div class="col-md mt-3  py-5" style="background-color: #020405;">
                         <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
                             <img src="./assets/fleet-icon.webp" alt="" width="50px">
                             <h3 class="sec4-h3">Dedicated Fleet</h3>
@@ -359,29 +360,33 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col py-5" style="background-color: #020405;">
-                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md me-3 py-5" style="background-color: #020405;">
+                        <div class=" d-flex flex-column justify-content-between h-100 p-3 text-start">
+
                             <img src="./assets/post-icon.webp" alt="" width="50px">
                             <h3 class="sec4-h3">Temp Controlled</h3>
                             <p class="sec4-p2">Maintain the integrity of your products with our dependable
                                 temperature-controlled vehicles, which are ideal for transporting perishable items.</p>
                             <a href="#">
+
                                 <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
                             </a>
                         </div>
                     </div>
-                    <div class="col py-5" style="background-color: #020405;">
+                    <div class="col-md mt-3 mt-md-0 me-3 py-5" style="background-color: #020405;">
                         <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
                             <img src="./assets/container-icon.webp" alt="" width="50px">
                             <h3 class="sec4-h3">Power Only</h3>
-                            <p class="sec4-p2">Mondson Truck Dispatch offers power-only truck services to make sure that
-                                trailers that don't have their own power can be transported safely.</p>
+                            <p class="sec4-p2 h-100">Mondson Truck Dispatch offers power-only truck services to make
+                                sure that trailers that don't have their own power can be transported safely</p>
                             <a href="#">
                                 <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
                             </a>
                         </div>
                     </div>
-                    <div class="col py-5" style="background-color: #020405;">
+                    <div class="col-md mt-3 mt-md-0 py-5" style="background-color: #020405;">
                         <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
                             <img src="./assets/container-icon.webp" alt="" width="50px">
                             <h3 class="sec4-h3">Flatbed</h3>
@@ -392,7 +397,81 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col py-5" style="background-color: #020405;">
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md me-3 py-5" style="background-color: #020405;">
+                        <div class=" d-flex flex-column justify-content-between h-100 p-3 text-start">
+
+                            <img src="./assets/girl-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Drayage</h3>
+                            <p class="sec4-p2">We specialize in drayage, offering efficient container transport across
+                                North America to enhance supply chain efficiency for businesses.</p>
+                            <a href="#">
+
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md mt-3 mt-md-0 me-3 py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/girl-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Expedited</h3>
+                            <p class="sec4-p2 h-100">At Mondson Truck Dispatch, we specialize in expedited trucking and
+                                offer quick and easy transportation options.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md mt-3 mt-md-0 py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/girl-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Partial Truckload</h3>
+                            <p class="sec4-p2 h-100">Mondson Truck Dispatch offers cost-effective, efficient LTL and
+                                partial truckload services, ensuring timely transportation for smaller shipments.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="row g-3">
+                    <div class="col-md py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/post-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Temp Controlled</h3>
+                            <p class="sec4-p2">Maintain the integrity of your products with our dependable
+                                temperature-controlled vehicles, which are ideal for transporting perishable items.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/container-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Power Only</h3>
+                            <p class="sec4-p2">Mondson Truck Dispatch offers power-only truck services to make sure that
+                                trailers that don't have their own power can be transported safely.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/container-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Flatbed</h3>
+                            <p class="sec4-p2 h-100">Flatbed truck services from Mondson Truck Dispatch will get your
+                                specialized and large goods to its destination quickly and safely.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- <div class="row g-3">
+                    <div class="col-md py-5" style="background-color: #020405;">
                         <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
                             <img src="./assets/girl-icon.webp" alt="" width="50px">
                             <h3 class="sec4-h3">Drayage</h3>
@@ -404,7 +483,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col py-5" style="background-color: #020405;">
+                    <div class="col-md py-5" style="background-color: #020405;">
                         <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
                             <img src="./assets/girl-icon.webp" alt="" width="50px">
                             <h3 class="sec4-h3">Expedited</h3>
@@ -416,7 +495,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col py-5" style="background-color: #020405;">
+                    <div class="col-md py-5" style="background-color: #020405;">
                         <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
                             <img src="./assets/girl-icon.webp" alt="" width="50px">
                             <h3 class="sec4-h3">Partial Truckload</h3>
@@ -427,8 +506,9 @@
                             </a>
                         </div>
                     </div>
+                </div> -->
 
-                </div>
+
             </div>
 
 
@@ -592,7 +672,7 @@
 
 
         <!-- 8th section  -->
-        <section id="section8" class="py-5  " style="background-color: #0B1117;overflow: hidden;">
+        <section id="section8" class="pt-5  " style="background-color: #0B1117;overflow: hidden;">
             <div class="container">
                 <div class="row gx-5  align-items-center">
                     <div class="col-12 col-md-6">
@@ -604,12 +684,12 @@
                                     to assist you!</p>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row ">
                             <div class="col d-flex align-items-center">
                                 <img src="./assets/phone-call.png" alt="" width="40px">
                                 <div style="padding: 20px 0 0 10px;">
                                     <a class="text-decoration-none text-white" href="#">
-                                        <h3>Our Phone</h3>
+                                        <h3 class="sec8-h3">Our Phone</h3>
 
                                     </a>
                                     <p class="num">(855) 518-2854 </p>
@@ -619,7 +699,7 @@
                                 <div class="col d-flex align-items-center ">
                                     <img src="./assets/email-fill.png" alt="" width="40px">
                                     <div style="padding: 20px 0 0 10px;">
-                                        <h3>Our Email </h3>
+                                        <h3 class="sec8-h3">Our Email </h3>
                                         <a class="text-decoration-none text-white" href="">
                                             <p class="email">Dispatch@mondsontrucking.com </p>
 
@@ -646,23 +726,24 @@
 
         </section>
         <!-- 9th section -->
+
         <section class="section9 " style="background-color: #0B1117;">
             <div class="container py-5">
-                <div class="row ">
-                    <div class=" col-12 col-md-4 d-flex  align-items-center  mb-3 mb-md-0"
+                <div class="row g-3">
+                    <div class="  col-md d-flex  align-items-center  me-3 mb-md-0"
                         style="background-color: #141F2A; padding: 30px 30px;">
                         <img src="./assets/location.png" alt="" width="30px">
                         <h3 class="m-0 ps-2">222 Strickland AVE Blackshear, GA, 31516 </h3>
                     </div>
-                    <div class="col-12 col-md-4 d-flex  align-items-center  mb-3 mb-md-0"
+                    <div class=" col-md d-flex  align-items-center  me-3 mb-md-0"
                         style="background-color: #141F2A; padding: 30px 30px;">
                         <img src="./assets/phone.png" alt="" width="30px">
                         <h3 class="m-0 ps-2">(855) 518-2854 </h3>
                     </div>
-                    <div class="col-12 col-md-4 d-flex  align-items-center "
+                    <div class=" col-md d-flex  align-items-center "
                         style="background-color: #141F2A; padding: 30px 30px; overflow: hidden;">
                         <img src="./assets/mail.png" alt="" width="30px">
-                        <h3 class="m-0 ps-2">Dispatch@mondsontrucking.com </h3>
+                        <h3 class="m-0 ps-2 sec9-last-h3">Dispatch@mondsontrucking.com </h3>
                     </div>
                 </div>
 
@@ -679,20 +760,25 @@
         </section>
 
 
-    </main>
 
-    <footer class="py-5 footer" style="background-color: #0B1117;">
-        <section>
+
+    </main>
+    <footer class=" pt-5 text-white" style="background-color: #0B1117;">
+
+
+
+        <!-- footer links -->
+        <section class="pt-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-4 text-center">
-                        <img src="./assets/logo.webp" alt="" width="200px">
+                        <img class="img-fluid w-75" src="./assets/logo.webp" alt="">
                         <p class="footer-p">Mondson Trucking, a family-owned Georgia business, excels in OTR
                             transportation
                             with a fleet of 53-foot reefer units, ensuring reliable delivery of fresh freight.</p>
                     </div>
                     <div class="col-12 col-md-8">
-                        <div class="row">
+                        <div class="row footer">
                             <div class="col-12 col-md-4">
                                 <h3 class="">EXPLORE</h3>
                                 <ul class="list-unstyled">
@@ -731,16 +817,19 @@
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr class="m-0">
+
         </section>
 
-        <section>
+        <!-- footer bottom -->
+        <section class="py-3">
             <div class="container text-center">
-                <p class="fs-6">Powered By Digital Growth Catalyze LLC</p>
+                <p>Powered By <a class="text-decoration-none footer-btm-link" href="#"> Digital Growth Catalyze LLC</a>
+                </p>
             </div>
         </section>
-
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 
