--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -13,18 +13,65 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./privacy.css">
     <title>Privacy Policy - MondsonTrucking</title>
 </head>
 
 <body>
     <header>
+        <section class="d-none d-lg-block  border-bottom" style="background-color: #0B1117;">
+            <!-- using this container bcz container is used already in whole website  -->
+            <div class="container pt-3 pb-3">
+
+                <div class="container-fluid">
+                    <div class="row ">
+                        <div class="col-auto ">
+                            <a class="text-decoration-none" href="">
+                                <p class="font-monorope">
+                                    <span><img src="./assets/location.png" alt="" width="20px"></span>
+                                    222 Strickland AVE Blackshear, GA, 31516
+                                </p>
+                            </a>
+                        </div>
+                        <div class="col-auto">
+                            <a class="text-decoration-none" href="">
+                                <p class="font-monorope">
+                                    <span><img src="./assets/mail.png" alt="" width="20px"></span>
+                                    Dispatch@mondsontrucking.com
+                                </p>
+                            </a>
+                        </div>
+                        <div class="col-auto ms-auto d-flex align-items-center">
+
+                            <a href="https://web.facebook.com" target="_blank" class="text-decoration-none me-2">
+                                <i class="fa-brands fa-facebook fa-xs rounded-circle p-2 custom-icon"></i>
+                            </a>
+                            <a href="https://twitter.com" target="_blank" class="text-decoration-none me-2">
+                                <i class="fa-brands fa-twitter fa-xs rounded-circle p-2 custom-icon"></i>
+                            </a>
+                            <a href="https://www.youtube.com/" target="_blank" class="text-decoration-none me-2">
+                                <i class="fa-brands fa-youtube fa-xs rounded-circle p-2 custom-icon"></i>
+                            </a>
+                            <a href="https://pk.linkedin.com/" target="_blank" class="text-decoration-none me-2">
+                                <i class="fa-brands fa-linkedin-in fa-xs rounded-circle p-2 custom-icon"></i>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <section class=" p-3" style="background-color: #0B1117;">
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#"><img class="img-fluid" src="./assets/logo.webp" alt=""
-                                width="100px"></a>
+                        <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="./assets/logo.webp"
+                                alt="" width="100px"></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +128,7 @@
             <div class="container d-flex flex-column justify-content-center align-items-center text-center content-box">
                 <h2 class="main-h2">Privacy Policy</h2>
                 <div class="pt-3">
-                    <a href="./index.html" class="text-decoration-none text-white link-home">Home</a>
+                    <a href="./index.html" class="text-decoration-none link-home">Home</a>
                     <span class="px-2">
 
                         <i class="bi bi-arrow-right fs-6" style="color: #FF493B;"></i>
@@ -175,23 +222,56 @@
             </div>
         </section>
 
+
+        <hr class="m-0">
     </main>
 
-    <footer class="bg-dark pt-5 text-white">
-        <section>
+    <footer class=" pt-5 text-white" style="background-color: #0B1117;">
+        <!-- 3 boxes -->
+        <section class=" pb-5">
+            <div class="container three-box">
+                <div class="row g-3 ">
+                    <div class=" col-md  me-2 mb-md-0" style="background-color: #141F2A; padding: 30px 30px;">
+                        <img src="./assets/location.png" alt="" width="30px">
+                        <h3 class="m-0 ">222 Strickland AVE Blackshear, GA, 31516 </h3>
+                    </div>
+                    <div class=" col-md   me-2 mb-md-0" style="background-color: #141F2A; padding: 30px 30px;">
+                        <img src="./assets/phone.png" alt="" width="30px">
+                        <h3 class="m-0 ">(855) 518-2854 </h3>
+                    </div>
+                    <div class=" col-md  " style="background-color: #141F2A; padding: 30px 30px; overflow: hidden;">
+                        <img src="./assets/mail.png" alt="" width="30px">
+                        <h3 class="m-0 ">Dispatch@mondsontrucking.com </h3>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+
+
+
+
+
+        </section>
+
+        <!-- footer links -->
+        <section class="pt-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-4 text-center">
-                        <img src="./assets/logo.webp" alt="" width="200px">
-                        <p class="fs-4">Mondson Trucking, a family-owned Georgia business, excels in OTR transportation
+                        <img class="img-fluid w-75" src="./assets/logo.webp" alt="">
+                        <p class="footer-p">Mondson Trucking, a family-owned Georgia business, excels in OTR
+                            transportation
                             with a fleet of 53-foot reefer units, ensuring reliable delivery of fresh freight.</p>
                     </div>
                     <div class="col-12 col-md-8">
-                        <div class="row">
-                            <div class="col">
-                                <p class="fs-3 font-monospace">EXPLORE</p>
+                        <div class="row footer">
+                            <div class="col-12 col-md-4">
+                                <h3 class="">EXPLORE</h3>
                                 <ul class="list-unstyled">
-                                    <li>Home</li>
+                                    <li class="hm">Home</li>
                                     <li>About Us</li>
                                     <li>Services</li>
                                     <li>Why Choose Us</li>
@@ -199,8 +279,8 @@
                                     <li>Contact Us</li>
                                 </ul>
                             </div>
-                            <div class="col">
-                                <p class="fs-3 font-monospace">SERVICES</p>
+                            <div class="col-12 col-md-4">
+                                <h3 class="">SERVICES</h3>
                                 <ul class="list-unstyled">
                                     <li>Dry Van</li>
                                     <li>Drop Equipment</li>
@@ -210,10 +290,10 @@
                                     <li>Flatbed</li>
                                 </ul>
                             </div>
-                            <div class="col">
-                                <p class="fs-3 font-monospace">
+                            <div class="col-12 col-md-4">
+                                <h3 class="">
                                     FOLLOW US
-                                </p>
+                                </h3>
                                 <ul class="list-unstyled">
                                     <li>Instagram</li>
                                     <li>Linkedin</li>
@@ -226,15 +306,17 @@
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr class="m-0">
+
         </section>
 
-        <section>
+        <!-- footer bottom -->
+        <section class="py-3">
             <div class="container text-center">
-                <p class="fs-6 p-0 m-0">Powered By Digital Growth Catalyze LLC</p>
+                <p>Powered By <a class="text-decoration-none footer-btm-link" href="#"> Digital Growth Catalyze LLC</a>
+                </p>
             </div>
         </section>
-
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
