all animations are added

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -126,8 +126,8 @@
         <section>
 
             <div class="container d-flex flex-column justify-content-center align-items-center text-center content-box">
-                <h2 class="main-h2">Privacy Policy</h2>
-                <div class="pt-3">
+                <h2 class="main-h2 animate-privacy">Privacy Policy</h2>
+                <div class="pt-3 animate-privacy-content">
                     <a href="./index.html" class="text-decoration-none link-home">Home</a>
                     <span class="px-2">
 
@@ -319,6 +319,12 @@
         </section>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
+    <script src="./gsap.min.js"></script>
+    <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
