number animation added

--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
                     <div class="col-lg-3 col-md-3 col-sm-6 col-12    position-relative custom-width"
                         style="background-color: #FF493B;">
                         <div class="row">
-                            <div class="col">
-                                <h4 class="inc-num1">25+</h4>
+                            <div class="col d-flex align-items-center">
+                                <h4 class="inc-num1 " id="inc_number1">25</h4>
+                                <span class="display-6">+</span>
 
                             </div>
 
@@ -183,8 +184,9 @@
                     <div class="col-lg-3 col-md-3 col-sm-6 col-12 position-relative   custom-width "
                         style="background-color: #FF493B;">
                         <div class="row">
-                            <div class="col">
-                                <h4 class="inc-num1">950+</h4>
+                            <div class="col d-flex align-items-center">
+                                <h4 class="inc-num1" id="inc_number2">950</h4>
+                                <span class="display-6">+</span>
 
                             </div>
                         </div>
@@ -201,9 +203,10 @@
                     <div class="col-lg-3 col-md-3 col-sm-6 col-12 position-relative   custom-width"
                         style="background-color: #FF493B;">
                         <div class="row">
-                            <div class="col">
+                            <div class="col d-flex align-items-center">
 
-                                <h4 class="inc-num1">1.5M+</h4>
+                                <h4 class="inc-num1" id="inc_number3">1.5</h4>
+                                <span class="display-6">M+</span>
                             </div>
                         </div>
                         <div class="row text-center">
