spacing issue solve

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                         <div class="col-auto">
                             <a class="text-decoration-none" href="">
                                 <p class="font-monorope">
-                                    <span><img src="./assets/mail.png" alt="" width="20px"></span>
+                                    <span style="padding-right: 3px;"><img src="./assets/mail.png" alt=""
+                                            width="20px"></span>
                                     Dispatch@mondsontrucking.com
                                 </p>
                             </a>
